--- a/DevFinanças/index.html
+++ b/DevFinanças/index.html
@@ -14,64 +14,139 @@
   </head>
   <body>
     <header>
-      <h1 id="logo">dev.finance$</h1>
+      <img src="./assets/logo.svg" alt="Logo Dev Finance">
     </header>
 
     <main class="container">
       <section id="balance">
-        <h2>Balanço</h2>
+        <h2 class="sr-only">Balanço</h2>
 
         <div class="card">
-          <h3>Entradas</h3>
+          <h3>
+            <span>Entradas</span>
+            <img src="./assets/income.svg" alt="Imagem de entradas">
+          </h3>
           <p>R$ 5.000,00</p>
         </div>
         <div class="card">
-          <h3>Saídas</h3>
+          <h3>
+            <span>Saídas</span>
+            <img src="./assets/expense.svg" alt="Imagem de gastos">
+          </h3>
           <p>R$ 2.000,00</p>
         </div>
         <div class="card total">
-          <h3>Total</h3>
+          <h3>
+            <span>Total</span>
+            <img src="./assets/total.svg" alt="Imagem de total">
+          </h3>
           <p>R$ 3.000,00</p>
         </div>
       </section>
 
       <section id="transaction">
-        <h2>Transações</h2>
+        <h2 class="sr-only">Transações</h2>
+        
+        <a href="#" class="button new">+ Nova Transação</a>
+
+        <table id="data-table">
+          <thead>
+            <tr>
+              <th>Descrição</th>
+              <th>Valor</th>
+              <th>Data</th>
+              <th></th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td class="description">Luz</td>
+              <td class="expense">- R$ 500,00</td>
+              <td class="date">23/01/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="Remover transação">
+              </td>
+            </tr>
+
+            <tr>
+              <td class="description">Criação website</td>
+              <td class="income">R$ 5.000,00</td>
+              <td class="date">23/01/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="Remover transação">
+              </td>
+            </tr>
+
+            <tr>
+              <td class="description">Internet</td>
+              <td class="expense">- R$ 200,00</td>
+              <td class="date">23/01/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="Remover transação">
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </section>
-
-      <table id="data-table">
-        <thead>
-          <tr>
-            <th>Descrição</th>
-            <th>Valor</th>
-            <th>Data</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td class="description">Luz</td>
-            <td class="expense">- R$ 500,00</td>
-            <td class="date">23/01/2021</td>
-          </tr>
-
-          <tr>
-            <td class="description">Criação website</td>
-            <td class="income">R$ 5.000,00</td>
-            <td class="date">23/01/2021</td>
-          </tr>
-
-          <tr>
-            <td class="description">Internet</td>
-            <td class="expense">- R$ 200,00</td>
-            <td class="date">23/01/2021</td>
-          </tr>
-        </tbody>
-      </table>
     </main>
+
+    <div class="modal-overlay active">
+      <div class="modal"> 
+        <div id="form">
+          <h2>Nova Transação</h2>
+          <form action="">
+            <div class="input-group">
+              <label 
+              class="sr-only"
+              for="description">Descrição</label>
+              <input 
+              type="text" 
+              id="description" 
+              name="description"
+              placeholder="Descrição" 
+              />
+            </div>
+
+            <div class="input-group">
+              <label 
+              class="sr-only"
+              for="amount">Valor</label>
+              <input 
+              type="number"
+              step="0.01" 
+              id="amount" 
+              name="amount"
+              placeholder="0,00" 
+              />
+              <small class="help">Use o final - (negativo) para desespesas e ,
+              (vírgula) para casas decimais</small>
+            </div> 
+
+            <div class="input-group">
+              <label 
+              class="sr-only"
+              for="date">Data</label>
+              <input 
+              type="date" 
+              id="date" 
+              name="date"
+              />
+            </div>
+
+            <div class="input-group actions">
+              <a href="#" class="button cancel">Cancelar</a>
+              <button>Salvar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 
     <footer>
       <p>dev.finance$</p>
     </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
