--- a/DevFinanças/index.html
+++ b/DevFinanças/index.html
@@ -60,32 +60,6 @@
           </thead>
 
           <tbody>
-            <tr>
-              <td class="description">Luz</td>
-              <td class="expense">- R$ 500,00</td>
-              <td class="date">23/01/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover transação">
-              </td>
-            </tr>
-
-            <tr>
-              <td class="description">Criação website</td>
-              <td class="income">R$ 5.000,00</td>
-              <td class="date">23/01/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover transação">
-              </td>
-            </tr>
-
-            <tr>
-              <td class="description">Internet</td>
-              <td class="expense">- R$ 200,00</td>
-              <td class="date">23/01/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover transação">
-              </td>
-            </tr>
           </tbody>
         </table>
       </section>
@@ -135,7 +109,10 @@
             </div>
 
             <div class="input-group actions">
-              <a href="#" class="button cancel">Cancelar</a>
+              <a 
+              onclick="Modal.close()"
+              href="#"
+              class="button cancel">Cancelar</a>
               <button>Salvar</button>
             </div>
           </form>
@@ -147,6 +124,6 @@
       <p>dev.finance$</p>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
