--- a/DevFinanças/index.html
+++ b/DevFinanças/index.html
@@ -28,6 +28,7 @@
           </h3>
           <p id="incomeDisplay">R$ 0,00</p>
         </div>
+
         <div class="card">
           <h3>
             <span>Saídas</span>
@@ -35,6 +36,7 @@
           </h3>
           <p id="expenseDisplay"> R$ 0,00</p>
         </div>
+
         <div class="card total">
           <h3>
             <span>Total</span>
@@ -47,7 +49,7 @@
       <section id="transaction">
         <h2 class="sr-only">Transações</h2>
         
-        <a href="#" class="button new">+ Nova Transação</a>
+        <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
 
         <table id="data-table">
           <thead>
@@ -65,7 +67,7 @@
       </section>
     </main>
 
-    <div class="modal-overlay active">
+    <div class="modal-overlay">
       <div class="modal"> 
         <div id="form">
           <h2>Nova Transação</h2>
@@ -113,7 +115,7 @@
               onclick="Modal.close()"
               href="#"
               class="button cancel">Cancelar</a>
-              <button>Salvar</button>
+              <button onclick="Modal.close()">Salvar</button>
             </div>
           </form>
         </div>
